testdata/deploy/plan/hook_delete_policy_proposed.yaml
apiVersion: batch/v1
kind: Job
metadata:
  name: migrate
  namespace: ns
  annotations:
    helm.sh/hook: pre-install,pre-upgrade
    helm.sh/hook-delete-policy: hook-succeeded
spec:
  template:
    spec:
      restartPolicy: Never
      containers:
        - name: migrate
          image: example/migrate:v1
