testdata/deploy/plan/statefulset_selector_previous.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: ns
spec:
  selector:
    matchLabels:
      app: db
  serviceName: db
  replicas: 1
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: example/db:v1
